[package]
name = "css-to-xpath"
version = "0.1.0"
edition = "2024"
# The floor is set by cssparser 0.37.0 / selectors 0.38.0: those crates'
# minimum supported Rust version.
rust-version = "1.88"
description = "Translate CSS selectors to XPath 1.0 expressions"
license = "MIT"

[dependencies]
# Exact pins: `selectors` is a 0.x crate tied to Servo's needs. Upgrades
# are deliberate events, gated on the full test suite.
selectors = "=0.39.0"
cssparser = "=0.37.0"
precomputed-hash = "=0.1.1"

# NOTE: no [workspace] table here intentionally, so this crate can be
# absorbed into an enclosing workspace when embedded in a larger project.
# In a standalone checkout, add [workspace] = {} so it becomes its own
# standalone workspace root.

[profile.release]
# Reachable panics must not abort the caller's process — unwind so they
# surface as errors that the caller can catch.
panic = "unwind"
